[package]
name = "pretty_rdf"
version = "0.11.0"
authors = ["Phillip Lord"]
repository = "https://github.com/phillord/pretty_rdf"
description = "RDF/XML Pretty Formatting"

edition = "2018"
license = "LGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# `features = ["std"]` is required, not optional: indexmap 1.x only provides the
# `RandomState` default hasher (and `IndexMap::new()` / the 2-type-arg form) when
# its build script sees `CARGO_FEATURE_STD`. indexmap 1.x has no default features,
# and on a tier-3 target like wasm64-unknown-unknown its fallback autocfg sysroot
# probe for `std` fails (no prebuilt std), so without this the crate compiles
# no-std and `IndexMap::new()` disappears.
indexmap = { version = "1.*", features = ["std"] }
quick-xml = "0.31.0"
oxrdf= "0.3.1"
oxrdfio= "0.2.1"

[dev-dependencies]
oxiri="0.2.1"
pretty_assertions = "1.*"
oxrdfio= "0.2.1"
